syntax = "proto3";

package flight;

option go_package = "github.com/qwaq-dev/drones/proto/flight";

import "google/protobuf/timestamp.proto";

// –°–µ—Ä–≤–∏—Å –¥–ª—è –∫–æ–º–º—É–Ω–∏–∫–∞—Ü–∏–∏ –º–µ–∂–¥—É Flight Processor –∏ Main Backend
service FlightNotificationService {
  // –£–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ –æ–± –∏–∑–º–µ–Ω–µ–Ω–∏–∏ —Å—Ç–∞—Ç—É—Å–∞ –∑–∞—è–≤–∫–∏
  rpc NotifyStatusUpdate(StatusUpdateRequest) returns (StatusUpdateResponse);
  
  // –£–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ –æ –Ω–∞—á–∞–ª–µ –ø–æ–ª–µ—Ç–∞
  rpc NotifyFlightStarted(FlightStartedRequest) returns (FlightStartedResponse);
  
  rpc UpdateDronePosition(DronePositionRequest) returns (DronePositionResponse);
  
  rpc NotifyFlightCompleted(FlightCompletedRequest) returns (FlightCompletedResponse);
  
  rpc NotifyRestrictedZoneProximity(RestrictedZoneAlertRequest) returns (RestrictedZoneAlertResponse);
}

// –ó–∞–ø—Ä–æ—Å –Ω–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ —Å—Ç–∞—Ç—É—Å–∞
message StatusUpdateRequest {
  int32 application_id = 1;
  string status = 2;
  string message = 3;
  string rejection_reason = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message StatusUpdateResponse {
  bool success = 1;
  string error_message = 2;
}

// –ó–∞–ø—Ä–æ—Å –æ –Ω–∞—á–∞–ª–µ –ø–æ–ª–µ—Ç–∞
message FlightStartedRequest {
  int32 application_id = 1;
  int32 drone_id = 2;
  int32 pilot_id = 3;
  repeated RoutePoint route = 4;
  DronePosition current_position = 5;
  google.protobuf.Timestamp start_time = 6;
  google.protobuf.Timestamp estimated_end_time = 7;
}

message FlightStartedResponse {
  bool success = 1;
  string error_message = 2;
}

// –ó–∞–ø—Ä–æ—Å –Ω–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø–æ–∑–∏—Ü–∏–∏
message DronePositionRequest {
  int32 application_id = 1;
  int32 drone_id = 2;
  double latitude = 3;
  double longitude = 4;
  double altitude = 5;
  double speed = 6;
  double heading = 7;
  double route_progress = 8;
  google.protobuf.Timestamp timestamp = 9;
}

message DronePositionResponse {
  bool success = 1;
  string error_message = 2;
}

// –ó–∞–ø—Ä–æ—Å –æ –∑–∞–≤–µ—Ä—à–µ–Ω–∏–∏ –ø–æ–ª–µ—Ç–∞
message FlightCompletedRequest {
  int32 application_id = 1;
  int32 drone_id = 2;
  DronePosition final_position = 3;
  google.protobuf.Timestamp completion_time = 4;
  string completion_status = 5; // completed, cancelled, emergency_landing
}

message FlightCompletedResponse {
  bool success = 1;
  string error_message = 2;
}

// üö® –ù–û–í–´–ï –°–û–û–ë–©–ï–ù–ò–Ø: –£–≤–µ–¥–æ–º–ª–µ–Ω–∏—è –æ –∑–∞–ø—Ä–µ—Ç–Ω—ã—Ö –∑–æ–Ω–∞—Ö
message RestrictedZoneAlertRequest {
  int32 application_id = 1;
  int32 drone_id = 2;
  string zone_name = 3;
  double zone_latitude = 4;
  double zone_longitude = 5;
  int32 zone_radius = 6;
  string alert_level = 7; // INFO, WARNING, DANGER
  double distance = 8;
  DronePosition drone_position = 9;
  google.protobuf.Timestamp timestamp = 10;
}

message RestrictedZoneAlertResponse {
  bool success = 1;
  string error_message = 2;
}

// –í—Å–ø–æ–º–æ–≥–∞—Ç–µ–ª—å–Ω—ã–µ —Å–æ–æ–±—â–µ–Ω–∏—è
message RoutePoint {
  int32 id = 1;
  double latitude = 2;
  double longitude = 3;
  double altitude = 4;
  int32 point_order = 5;
  int32 application_id = 6;
}

message DronePosition {
  int32 application_id = 1;
  int32 drone_id = 2;
  double latitude = 3;
  double longitude = 4;
  double altitude = 5;
  double speed = 6;
  double heading = 7;
  double route_progress = 8;
  google.protobuf.Timestamp timestamp = 9;
}
