package processor

import (
	"context"
	"log"
	"math"
	"sync"
	"time"

	"github.com/qwaq-dev/drones/internal/config"
	"github.com/qwaq-dev/drones/internal/grpc"
	"github.com/qwaq-dev/drones/internal/repository"
	"github.com/qwaq-dev/drones/internal/structures"
)

type FlightProcessor struct {
	repo            *repository.Repository
	grpcClient      *grpc.NotificationClient
	config          *config.Config
	activeFlights   map[int]*structures.ActiveFlight
	mutex           sync.RWMutex
	ctx             context.Context
	cancel          context.CancelFunc
	restrictedZones []structures.RestrictedZone
	zonesLastUpdate time.Time
}

func New(repo *repository.Repository, grpcClient *grpc.NotificationClient, cfg *config.Config) *FlightProcessor {
	ctx, cancel := context.WithCancel(context.Background())

	return &FlightProcessor{
		repo:          repo,
		grpcClient:    grpcClient,
		config:        cfg,
		activeFlights: make(map[int]*structures.ActiveFlight),
		ctx:           ctx,
		cancel:        cancel,
	}
}

func (fp *FlightProcessor) Start() {
	log.Println("üöÄ Starting flight processor...")

	// –ó–∞–≥—Ä—É–∂–∞–µ–º –∑–∞–ø—Ä–µ—Ç–Ω—ã–µ –∑–æ–Ω—ã –ø—Ä–∏ —Å—Ç–∞—Ä—Ç–µ
	fp.loadRestrictedZones()

	// –ó–∞–ø—É—Å–∫–∞–µ–º –æ–±—Ä–∞–±–æ—Ç–∫—É –Ω–æ–≤—ã—Ö –∑–∞—è–≤–æ–∫
	go fp.processNewApplications()

	// –ó–∞–ø—É—Å–∫–∞–µ–º —Å–∏–º—É–ª—è—Ü–∏—é –ø–æ–ª–µ—Ç–æ–≤
	go fp.simulateFlights()
}

func (fp *FlightProcessor) Stop() {
	fp.cancel()
}

// –ó–∞–≥—Ä—É–∂–∞–µ–º –∑–∞–ø—Ä–µ—Ç–Ω—ã–µ –∑–æ–Ω—ã –≤ –∫—ç—à
func (fp *FlightProcessor) loadRestrictedZones() {
	zones, err := fp.repo.GetRestrictedZones()
	if err != nil {
		log.Printf("‚ùå Error loading restricted zones: %v", err)
		return
	}

	fp.restrictedZones = zones
	fp.zonesLastUpdate = time.Now()
	log.Printf("üö´ Loaded %d restricted zones into cache", len(zones))
}

// –û–±–Ω–æ–≤–ª—è–µ–º –∫—ç—à –∑–∞–ø—Ä–µ—Ç–Ω—ã—Ö –∑–æ–Ω –∫–∞–∂–¥—ã–µ 5 –º–∏–Ω—É—Ç
func (fp *FlightProcessor) updateRestrictedZonesCache() {
	if time.Since(fp.zonesLastUpdate) > 5*time.Minute {
		fp.loadRestrictedZones()
	}
}

// –û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–æ–≤—ã—Ö –∑–∞—è–≤–æ–∫
func (fp *FlightProcessor) processNewApplications() {
	ticker := time.NewTicker(5 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-fp.ctx.Done():
			return
		case <-ticker.C:
			fp.checkPendingApplications()
		}
	}
}

func (fp *FlightProcessor) checkPendingApplications() {
	applications, err := fp.repo.GetPendingApplications()
	if err != nil {
		log.Printf("‚ùå Error getting pending applications: %v", err)
		return
	}

	log.Printf("üìã Found %d pending applications", len(applications))

	for _, app := range applications {
		go fp.processApplication(app)
	}
}

func (fp *FlightProcessor) processApplication(app structures.Application) {
	log.Printf("üîÑ Processing application %d", app.Id)

	// –û–±–Ω–æ–≤–ª—è–µ–º —Å—Ç–∞—Ç—É—Å –Ω–∞ "processing"
	err := fp.repo.UpdateApplicationStatus(app.Id, structures.StatusProcessing, "")
	if err != nil {
		log.Printf("‚ùå Error updating application status: %v", err)
		return
	}

	// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º —É–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ
	fp.grpcClient.NotifyStatusUpdate(context.Background(), app.Id, structures.StatusProcessing, "Application is being processed", "")

	// –ò–º–∏—Ç–∏—Ä—É–µ–º –≤—Ä–µ–º—è –æ–±—Ä–∞–±–æ—Ç–∫–∏
	log.Printf("‚è≥ Processing application %d for %v", app.Id, fp.config.ProcessingDelay)
	time.Sleep(fp.config.ProcessingDelay)

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º –º–∞—Ä—à—Ä—É—Ç –∏ –∑–∞–ø—Ä–µ—Ç–Ω—ã–µ –∑–æ–Ω—ã
	approved, reason := fp.validateFlight(app)

	if approved {
		log.Printf("‚úÖ Application %d APPROVED", app.Id)
		// –û–¥–æ–±—Ä—è–µ–º –∑–∞—è–≤–∫—É
		err = fp.repo.UpdateApplicationStatus(app.Id, structures.StatusApproved, "")
		if err != nil {
			log.Printf("‚ùå Error approving application: %v", err)
			return
		}

		fp.grpcClient.NotifyStatusUpdate(context.Background(), app.Id, structures.StatusApproved, "Application approved, starting flight", "")

		// –ó–∞–ø—É—Å–∫–∞–µ–º –ø–æ–ª–µ—Ç
		fp.startFlight(app)
	} else {
		log.Printf("‚ùå Application %d REJECTED: %s", app.Id, reason)
		// –û—Ç–∫–ª–æ–Ω—è–µ–º –∑–∞—è–≤–∫—É
		err = fp.repo.UpdateApplicationStatus(app.Id, structures.StatusRejected, reason)
		if err != nil {
			log.Printf("‚ùå Error rejecting application: %v", err)
			return
		}

		fp.grpcClient.NotifyStatusUpdate(context.Background(), app.Id, structures.StatusRejected, "Application rejected", reason)
	}
}

func (fp *FlightProcessor) validateFlight(app structures.Application) (bool, string) {
	log.Printf("üîç Validating flight for application %d", app.Id)

	// –ü–æ–ª—É—á–∞–µ–º —Ç–æ—á–∫—É –Ω–∞–∑–Ω–∞—á–µ–Ω–∏—è –∏–∑ –º–∞—Ä—à—Ä—É—Ç–∞
	destinationPoints, err := fp.repo.GetRouteByApplicationId(app.Id)
	if err != nil {
		log.Printf("‚ùå Error loading destination for app %d: %v", app.Id, err)
		return false, "Error loading destination"
	}

	log.Printf("üìç Found %d destination points for application %d", len(destinationPoints), app.Id)

	if len(destinationPoints) == 0 {
		log.Printf("‚ùå No destination point found for application %d", app.Id)
		return false, "No destination point specified"
	}

	// –ë–µ—Ä–µ–º –ø–µ—Ä–≤—É—é —Ç–æ—á–∫—É –∫–∞–∫ –ø—É–Ω–∫—Ç –Ω–∞–∑–Ω–∞—á–µ–Ω–∏—è
	destination := destinationPoints[0]
	log.Printf("üéØ Destination: lat=%.6f, lon=%.6f, alt=%.2f",
		destination.Latitude, destination.Longitude, destination.Altitude)

	// –°–æ–∑–¥–∞–µ–º –ø–æ–ª–Ω—ã–π –º–∞—Ä—à—Ä—É—Ç: –±–∞–∑–∞ -> –Ω–∞–∑–Ω–∞—á–µ–Ω–∏–µ
	fullRoute := fp.createFullRoute(destination)
	log.Printf("üõ£Ô∏è Created full route with %d points", len(fullRoute))
	for i, point := range fullRoute {
		log.Printf("   Point %d: lat=%.6f, lon=%.6f, alt=%.2f",
			i, point.Latitude, point.Longitude, point.Altitude)
	}

	// –û–±–Ω–æ–≤–ª—è–µ–º –∫—ç—à –∑–∞–ø—Ä–µ—Ç–Ω—ã—Ö –∑–æ–Ω
	fp.updateRestrictedZonesCache()

	log.Printf("üö´ Found %d restricted zones", len(fp.restrictedZones))
	for _, zone := range fp.restrictedZones {
		log.Printf("   Zone '%s': lat=%.6f, lon=%.6f, radius=%d m",
			zone.Name, zone.Latitude, zone.Longtitude, zone.Radius)
	}

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–µ—Ä–µ—Å–µ—á–µ–Ω–∏–µ —Å –∑–∞–ø—Ä–µ—Ç–Ω—ã–º–∏ –∑–æ–Ω–∞–º–∏
	for i, point := range fullRoute {
		for _, zone := range fp.restrictedZones {
			distance := fp.calculateDistanceMeters(point.Latitude, point.Longitude, zone.Latitude, zone.Longtitude)
			log.Printf("üîç Point %d to zone '%s': distance=%.1f m, zone radius=%d m",
				i, zone.Name, distance, zone.Radius)

			if distance <= float64(zone.Radius) {
				log.Printf("‚ùå COLLISION! Point %d intersects with zone '%s' (distance: %.1f m <= radius: %d m)",
					i, zone.Name, distance, zone.Radius)
				return false, "Route intersects with restricted zone: " + zone.Name
			}
		}
	}

	log.Printf("‚úÖ No restricted zone collisions found")
	log.Printf("‚úÖ All validations passed for application %d", app.Id)
	return true, ""
}

// –°–æ–∑–¥–∞–µ–º –ø–æ–ª–Ω—ã–π –º–∞—Ä—à—Ä—É—Ç –æ—Ç –±–∞–∑—ã –¥–æ –ø—É–Ω–∫—Ç–∞ –Ω–∞–∑–Ω–∞—á–µ–Ω–∏—è
func (fp *FlightProcessor) createFullRoute(destination structures.RoutePoint) []structures.RoutePoint {
	// –ö–æ–æ—Ä–¥–∏–Ω–∞—Ç—ã –±–∞–∑—ã –¥—Ä–æ–Ω–æ–≤ (–º–æ–∂–µ—Ç–µ –∏–∑–º–µ–Ω–∏—Ç—å –Ω–∞ —Å–≤–æ–∏)
	baseLocation := structures.RoutePoint{
		Id:            0,        // –í–∏—Ä—Ç—É–∞–ª—å–Ω–∞—è —Ç–æ—á–∫–∞
		Latitude:      51.11990, // –í–∞—à–∞ –±–∞–∑–∞
		Longitude:     71.48048,
		Altitude:      0.0, // –í—ã—Å–æ—Ç–∞ –≤–∑–ª–µ—Ç–∞ –≤ –º–µ—Ç—Ä–∞—Ö
		PointOrder:    0,
		ApplicationId: destination.ApplicationId,
	}

	// –û–±–Ω–æ–≤–ª—è–µ–º –ø–æ—Ä—è–¥–æ–∫ —Ç–æ—á–µ–∫
	destination.PointOrder = 1

	return []structures.RoutePoint{baseLocation, destination}
}

func (fp *FlightProcessor) startFlight(app structures.Application) {
	// –ü–æ–ª—É—á–∞–µ–º —Ç–æ—á–∫—É –Ω–∞–∑–Ω–∞—á–µ–Ω–∏—è
	destinationPoints, err := fp.repo.GetRouteByApplicationId(app.Id)
	if err != nil {
		log.Printf("‚ùå Error loading destination for flight %d: %v", app.Id, err)
		return
	}

	if len(destinationPoints) == 0 {
		log.Printf("‚ùå No destination found for application %d", app.Id)
		return
	}

	// –°–æ–∑–¥–∞–µ–º –ø–æ–ª–Ω—ã–π –º–∞—Ä—à—Ä—É—Ç
	fullRoute := fp.createFullRoute(destinationPoints[0])

	// –°–æ–∑–¥–∞–µ–º –∞–∫—Ç–∏–≤–Ω—ã–π –ø–æ–ª–µ—Ç
	flight := &structures.ActiveFlight{
		ApplicationId:   app.Id,
		DroneId:         app.Drone_id,
		PilotId:         app.Pilot_id,
		Route:           fullRoute,
		CurrentWaypoint: 0,
		StartTime:       time.Now(),
		Status:          structures.StatusExecuting,
		CurrentPosition: structures.DronePosition{
			ApplicationId: app.Id,
			DroneId:       app.Drone_id,
			Latitude:      fullRoute[0].Latitude, // –ù–∞—á–∏–Ω–∞–µ–º —Å –±–∞–∑—ã
			Longitude:     fullRoute[0].Longitude,
			Altitude:      fullRoute[0].Altitude,
			Timestamp:     time.Now(),
			RouteProgress: 0.0, // üîß –í–ê–ñ–ù–û: –ù–∞—á–∏–Ω–∞–µ–º —Å 0%
		},
	}

	// üîß –ò–°–ü–†–ê–í–õ–ï–ù–ù–´–ô —Ä–∞—Å—á–µ—Ç –≤—Ä–µ–º–µ–Ω–∏ –ø–æ–ª–µ—Ç–∞
	totalDistance := fp.calculateRouteDistanceMeters(fullRoute)

	// –í—Ä–µ–º—è = —Ä–∞—Å—Å—Ç–æ—è–Ω–∏–µ (–º) / —Å–∫–æ—Ä–æ—Å—Ç—å (–º/—Å) = —Å–µ–∫—É–Ω–¥—ã
	flightTimeSeconds := totalDistance / fp.config.FlightSpeedMS
	flightDuration := time.Duration(flightTimeSeconds) * time.Second

	flight.EstimatedEndTime = flight.StartTime.Add(flightDuration)

	fp.mutex.Lock()
	fp.activeFlights[app.Id] = flight
	fp.mutex.Unlock()

	// –û–±–Ω–æ–≤–ª—è–µ–º —Å—Ç–∞—Ç—É—Å –≤ –ë–î
	err = fp.repo.UpdateApplicationStatus(app.Id, structures.StatusExecuting, "")
	if err != nil {
		log.Printf("‚ùå Error updating application status to executing: %v", err)
	}

	fp.grpcClient.NotifyFlightStarted(context.Background(), flight)

	log.Printf("üöÅ Started flight for application %d", app.Id)
	log.Printf("   üìè Distance: %.1f m (%.2f km)", totalDistance, totalDistance/1000)
	log.Printf("   üèÉ Speed: %.1f m/s (%.1f km/h)", fp.config.FlightSpeedMS, fp.config.FlightSpeedMS*3.6)
	log.Printf("   ‚è±Ô∏è Duration: %v", flightDuration)
}

// –û—Å—Ç–∞–ª—å–Ω—ã–µ –º–µ—Ç–æ–¥—ã –æ—Å—Ç–∞—é—Ç—Å—è –±–µ–∑ –∏–∑–º–µ–Ω–µ–Ω–∏–π...
func (fp *FlightProcessor) simulateFlights() {
	ticker := time.NewTicker(fp.config.PositionUpdateInterval)
	defer ticker.Stop()

	for {
		select {
		case <-fp.ctx.Done():
			return
		case <-ticker.C:
			fp.updateFlightPositions()
		}
	}
}

func (fp *FlightProcessor) updateFlightPositions() {
	fp.mutex.RLock()
	flights := make([]*structures.ActiveFlight, 0, len(fp.activeFlights))
	for _, flight := range fp.activeFlights {
		flights = append(flights, flight)
	}
	fp.mutex.RUnlock()

	for _, flight := range flights {
		fp.updateSingleFlight(flight)
	}
}

func (fp *FlightProcessor) updateSingleFlight(flight *structures.ActiveFlight) {
	if flight.CurrentWaypoint >= len(flight.Route) {
		fp.completeFlight(flight)
		return
	}

	currentWaypoint := flight.Route[flight.CurrentWaypoint]

	// –†–∞—Å—Å—á–∏—Ç—ã–≤–∞–µ–º –Ω–æ–≤—É—é –ø–æ–∑–∏—Ü–∏—é
	newPosition := fp.calculateNewPosition(flight.CurrentPosition, currentWaypoint)

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º, –¥–æ—Å—Ç–∏–≥–ª–∏ –ª–∏ –º—ã —Ç–µ–∫—É—â–µ–π —Ç–æ—á–∫–∏ –º–∞—Ä—à—Ä—É—Ç–∞ (–≤ –º–µ—Ç—Ä–∞—Ö)
	distance := fp.calculateDistanceMeters(
		newPosition.Latitude, newPosition.Longitude,
		currentWaypoint.Latitude, currentWaypoint.Longitude,
	)

	if distance < 10.0 { // 10 –º–µ—Ç—Ä–æ–≤ —Ç–æ—á–Ω–æ—Å—Ç—å
		log.Printf("üéØ Drone %d reached waypoint %d", flight.DroneId, flight.CurrentWaypoint)
		flight.CurrentWaypoint++
		if flight.CurrentWaypoint >= len(flight.Route) {
			fp.completeFlight(flight)
			return
		}
	}

	// –û–±–Ω–æ–≤–ª—è–µ–º –ø–æ–∑–∏—Ü–∏—é
	flight.CurrentPosition = newPosition

	// üîß –ò–°–ü–†–ê–í–õ–ï–ù–ù–´–ô —Ä–∞—Å—á–µ—Ç –ø—Ä–æ–≥—Ä–µ—Å—Å–∞ –º–∞—Ä—à—Ä—É—Ç–∞
	flight.CurrentPosition.RouteProgress = fp.calculateRouteProgress(flight)

	// üö® –ù–û–í–û–ï: –ü—Ä–æ–≤–µ—Ä—è–µ–º –±–ª–∏–∑–æ—Å—Ç—å –∫ –∑–∞–ø—Ä–µ—Ç–Ω—ã–º –∑–æ–Ω–∞–º
	fp.checkRestrictedZoneProximity(flight)

	// –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤ –ë–î
	err := fp.repo.SaveDronePosition(flight.CurrentPosition)
	if err != nil {
		log.Printf("‚ùå Error saving drone position: %v", err)
	}

	// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø–æ–∑–∏—Ü–∏–∏
	fp.grpcClient.UpdateDronePosition(context.Background(), flight.CurrentPosition)

	// –õ–æ–≥–∏—Ä—É–µ–º –∫–∞–∂–¥—ã–µ 2 —Å–µ–∫—É–Ω–¥—ã –¥–ª—è –æ—Ç–ª–∞–¥–∫–∏
	if time.Now().Unix()%2 == 0 {
		log.Printf("üìç Drone %d: lat=%.6f, lon=%.6f, progress=%.1f%%, waypoint=%d/%d, distance_to_target=%.1fm",
			flight.DroneId, flight.CurrentPosition.Latitude, flight.CurrentPosition.Longitude,
			flight.CurrentPosition.RouteProgress, flight.CurrentWaypoint, len(flight.Route)-1, distance)
	}
}

// üö® –ù–û–í–ê–Ø –§–£–ù–ö–¶–ò–Ø: –ü—Ä–æ–≤–µ—Ä–∫–∞ –±–ª–∏–∑–æ—Å—Ç–∏ –∫ –∑–∞–ø—Ä–µ—Ç–Ω—ã–º –∑–æ–Ω–∞–º
func (fp *FlightProcessor) checkRestrictedZoneProximity(flight *structures.ActiveFlight) {
	const WARNING_DISTANCE = 100.0 // –ü—Ä–µ–¥—É–ø—Ä–µ–∂–¥–µ–Ω–∏–µ –∑–∞ 100 –º–µ—Ç—Ä–æ–≤
	const DANGER_DISTANCE = 50.0   // –û–ø–∞—Å–Ω–æ—Å—Ç—å –∑–∞ 50 –º–µ—Ç—Ä–æ–≤

	for _, zone := range fp.restrictedZones {
		distance := fp.calculateDistanceMeters(
			flight.CurrentPosition.Latitude,
			flight.CurrentPosition.Longitude,
			zone.Latitude,
			zone.Longtitude,
		)

		// –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ä–∞–∑–ª–∏—á–Ω—ã–µ —É—Ä–æ–≤–Ω–∏ –±–ª–∏–∑–æ—Å—Ç–∏
		if distance <= DANGER_DISTANCE {
			// –ö–†–ò–¢–ò–ß–ï–°–ö–ê–Ø –ë–õ–ò–ó–û–°–¢–¨ - –∫—Ä–∞—Å–Ω–∞—è –∑–æ–Ω–∞
			fp.sendRestrictedZoneAlert(flight, zone, "DANGER", distance)
			log.Printf("üö® DANGER! Drone %d is %.1fm from restricted zone '%s'",
				flight.DroneId, distance, zone.Name)
		} else if distance <= WARNING_DISTANCE {
			// –ü–†–ï–î–£–ü–†–ï–ñ–î–ï–ù–ò–ï - –∂–µ–ª—Ç–∞—è –∑–æ–Ω–∞
			fp.sendRestrictedZoneAlert(flight, zone, "WARNING", distance)
			log.Printf("‚ö†Ô∏è WARNING! Drone %d is %.1fm from restricted zone '%s'",
				flight.DroneId, distance, zone.Name)
		} else if distance <= float64(zone.Radius)+WARNING_DISTANCE {
			// –ò–ù–§–û–†–ú–ê–¶–ò–Ø - –∑–µ–ª–µ–Ω–∞—è –∑–æ–Ω–∞
			fp.sendRestrictedZoneAlert(flight, zone, "INFO", distance)
			log.Printf("‚ÑπÔ∏è INFO: Drone %d is %.1fm from restricted zone '%s'",
				flight.DroneId, distance, zone.Name)
		}
	}
}

func (fp *FlightProcessor) sendRestrictedZoneAlert(flight *structures.ActiveFlight, zone structures.RestrictedZone, alertLevel string, distance float64) {
	err := fp.grpcClient.NotifyRestrictedZoneProximity(context.Background(),
		flight.ApplicationId,
		flight.DroneId,
		zone,
		alertLevel,
		distance,
		flight.CurrentPosition,
	)

	if err != nil {
		log.Printf("‚ùå Error sending restricted zone alert: %v", err)
	}
}

func (fp *FlightProcessor) calculateNewPosition(current structures.DronePosition, target structures.RoutePoint) structures.DronePosition {
	// –†–∞—Å—Å—á–∏—Ç—ã–≤–∞–µ–º –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–µ –∫ —Ü–µ–ª–∏
	deltaLat := target.Latitude - current.Latitude
	deltaLon := target.Longitude - current.Longitude
	deltaAlt := target.Altitude - current.Altitude

	distance := math.Sqrt(deltaLat*deltaLat + deltaLon*deltaLon)

	// –°–∫–æ—Ä–æ—Å—Ç—å –≤ –≥—Ä–∞–¥—É—Å–∞—Ö –≤ —Å–µ–∫—É–Ω–¥—É
	// 1 –≥—Ä–∞–¥—É—Å ‚âà 111320 –º–µ—Ç—Ä–æ–≤ –Ω–∞ —ç–∫–≤–∞—Ç–æ—Ä–µ
	speedDegPerSec := fp.config.FlightSpeedMS / 111320.0

	if distance < speedDegPerSec {
		// –î–æ—Å—Ç–∏–≥–ª–∏ —Ç–æ—á–∫–∏
		return structures.DronePosition{
			ApplicationId: current.ApplicationId,
			DroneId:       current.DroneId,
			Latitude:      target.Latitude,
			Longitude:     target.Longitude,
			Altitude:      target.Altitude,
			Speed:         fp.config.FlightSpeedMS,
			Heading:       current.Heading,
			Timestamp:     time.Now(),
		}
	}

	// –î–≤–∏–∂–µ–º—Å—è –∫ —Ü–µ–ª–∏
	ratio := speedDegPerSec / distance
	newLat := current.Latitude + deltaLat*ratio
	newLon := current.Longitude + deltaLon*ratio
	newAlt := current.Altitude + deltaAlt*ratio

	// –†–∞—Å—Å—á–∏—Ç—ã–≤–∞–µ–º –∫—É—Ä—Å
	heading := math.Atan2(deltaLon, deltaLat) * 180 / math.Pi
	if heading < 0 {
		heading += 360
	}

	return structures.DronePosition{
		ApplicationId: current.ApplicationId,
		DroneId:       current.DroneId,
		Latitude:      newLat,
		Longitude:     newLon,
		Altitude:      newAlt,
		Speed:         fp.config.FlightSpeedMS,
		Heading:       heading,
		Timestamp:     time.Now(),
	}
}

// üîß –ü–û–õ–ù–û–°–¢–¨–Æ –ü–ï–†–ï–ü–ò–°–ê–ù–ù–´–ô —Ä–∞—Å—á–µ—Ç –ø—Ä–æ–≥—Ä–µ—Å—Å–∞ –º–∞—Ä—à—Ä—É—Ç–∞
func (fp *FlightProcessor) calculateRouteProgress(flight *structures.ActiveFlight) float64 {
	if len(flight.Route) < 2 {
		return 100.0
	}

	// –û–±—â–µ–µ —Ä–∞—Å—Å—Ç–æ—è–Ω–∏–µ –≤—Å–µ–≥–æ –º–∞—Ä—à—Ä—É—Ç–∞
	totalDistance := fp.calculateRouteDistanceMeters(flight.Route)
	if totalDistance <= 0 {
		return 100.0
	}

	// –†–∞—Å—Å—Ç–æ—è–Ω–∏–µ –æ—Ç —Å—Ç–∞—Ä—Ç–æ–≤–æ–π —Ç–æ—á–∫–∏ –¥–æ —Ç–µ–∫—É—â–µ–π –ø–æ–∑–∏—Ü–∏–∏
	startPoint := flight.Route[0]
	currentDistanceFromStart := fp.calculateDistanceMeters(
		startPoint.Latitude, startPoint.Longitude,
		flight.CurrentPosition.Latitude, flight.CurrentPosition.Longitude,
	)

	// –†–∞—Å—Å—á–∏—Ç—ã–≤–∞–µ–º –ø—Ä–æ–≥—Ä–µ—Å—Å –∫–∞–∫ –æ—Ç–Ω–æ—à–µ–Ω–∏–µ –ø—Ä–æ–π–¥–µ–Ω–Ω–æ–≥–æ —Ä–∞—Å—Å—Ç–æ—è–Ω–∏—è –∫ –æ–±—â–µ–º—É
	progress := (currentDistanceFromStart / totalDistance) * 100

	// –û–≥—Ä–∞–Ω–∏—á–∏–≤–∞–µ–º –æ—Ç 0 –¥–æ 100
	if progress < 0 {
		progress = 0
	}
	if progress > 100 {
		progress = 100
	}

	return progress
}

func (fp *FlightProcessor) completeFlight(flight *structures.ActiveFlight) {
	log.Printf("üèÅ Completing flight for application %d", flight.ApplicationId)

	// –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –ø—Ä–æ–≥—Ä–µ—Å—Å 100% –ø—Ä–∏ –∑–∞–≤–µ—Ä—à–µ–Ω–∏–∏
	flight.CurrentPosition.RouteProgress = 100.0

	// –û–±–Ω–æ–≤–ª—è–µ–º —Å—Ç–∞—Ç—É—Å
	err := fp.repo.UpdateApplicationStatus(flight.ApplicationId, structures.StatusCompleted, "")
	if err != nil {
		log.Printf("‚ùå Error updating application status to completed: %v", err)
	}

	// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º —Ñ–∏–Ω–∞–ª—å–Ω–æ–µ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø–æ–∑–∏—Ü–∏–∏ —Å 100%
	fp.grpcClient.UpdateDronePosition(context.Background(), flight.CurrentPosition)

	// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º —É–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ –æ –∑–∞–≤–µ—Ä—à–µ–Ω–∏–∏
	fp.grpcClient.NotifyFlightCompleted(context.Background(), flight, "completed")

	// –£–¥–∞–ª—è–µ–º –∏–∑ –∞–∫—Ç–∏–≤–Ω—ã—Ö –ø–æ–ª–µ—Ç–æ–≤
	fp.mutex.Lock()
	delete(fp.activeFlights, flight.ApplicationId)
	fp.mutex.Unlock()
}

// –†–∞—Å—á–µ—Ç —Ä–∞—Å—Å—Ç–æ—è–Ω–∏—è –≤ –ú–ï–¢–†–ê–•
func (fp *FlightProcessor) calculateDistanceMeters(lat1, lon1, lat2, lon2 float64) float64 {
	// –§–æ—Ä–º—É–ª–∞ –≥–∞–≤–µ—Ä—Å–∏–Ω—É—Å–∞ –¥–ª—è —Ä–∞—Å—á–µ—Ç–∞ —Ä–∞—Å—Å—Ç–æ—è–Ω–∏—è –º–µ–∂–¥—É –¥–≤—É–º—è —Ç–æ—á–∫–∞–º–∏
	const R = 6371000 // –†–∞–¥–∏—É—Å –ó–µ–º–ª–∏ –≤ –ú–ï–¢–†–ê–•

	dLat := (lat2 - lat1) * math.Pi / 180
	dLon := (lon2 - lon1) * math.Pi / 180

	a := math.Sin(dLat/2)*math.Sin(dLat/2) +
		math.Cos(lat1*math.Pi/180)*math.Cos(lat2*math.Pi/180)*
			math.Sin(dLon/2)*math.Sin(dLon/2)

	c := 2 * math.Atan2(math.Sqrt(a), math.Sqrt(1-a))
	return R * c // –í–æ–∑–≤—Ä–∞—â–∞–µ–º –≤ –º–µ—Ç—Ä–∞—Ö
}

func (fp *FlightProcessor) calculateRouteDistanceMeters(route []structures.RoutePoint) float64 {
	if len(route) < 2 {
		return 0
	}

	totalDistance := 0.0
	for i := 1; i < len(route); i++ {
		distance := fp.calculateDistanceMeters(
			route[i-1].Latitude, route[i-1].Longitude,
			route[i].Latitude, route[i].Longitude,
		)
		totalDistance += distance
	}

	return totalDistance // –í –º–µ—Ç—Ä–∞—Ö
}
